# artists-querify-cli

./: Cargo.toml  README.md
src/: api.rs  artists.rs  main.rs  view.rs
